--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "ts-node node_modules/.bin/tape src/**/*.test.{ts,tsx} | tap-spec",
     "bench": "ts-node node_modules/.bin/tape src/**/*.benchmark.{ts,tsx} | tap-spec",
     "coverage": "nyc --reporter=lcov --check-coverage --lines=75 --require ts-node/register tape src/**/*.test.{ts,tsx} | tap-spec; nyc report ---reporter=text",
-    "clean": "rm -rf esm cjs browser types .nyc_output coverage",
+    "clean": "rm -rf esm cjs browser types .nyc_output coverage dist .parcel-cache",
     "lint": "eslint . --fix",
     "prettier": "prettier --ignore-path .eslintignore --ignore-unknown --write .",
     "preCommit": "npm run prettier && npm run lint && npm run coverage",
@@ -35,9 +35,9 @@
   "license": "(MIT OR Apache-2.0)",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "23",
+    "@rollup/plugin-commonjs": "24",
     "@rollup/plugin-node-resolve": "15",
-    "@rollup/plugin-typescript": "10",
+    "@rollup/plugin-typescript": "11",
     "@types/gl-matrix": "3",
     "@types/raf": "3",
     "@types/tape": "4",
@@ -60,7 +60,7 @@
     "ts-node": "10",
     "tslib": "2",
     "typedoc": "0",
-    "typescript": "4"
+    "typescript": "5"
   },
   "peerDependencies": {
     "tslib": "2"
